--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -43,7 +43,7 @@
         <h4>Favorite Quotes</h4>
         <ul>
           <li>
-            "If you are not in pain, you are not learning.", "FAFO", "FIFI" -
+            "If you are not in pain, you are not learning.", "FAFO", "F*** it Fly it" -
             ppl @ SpaceX
           </li>
           <li>"Who needs drugs when you have Engineering" - Stuff Made Here</li>
