--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -116,6 +116,20 @@
     {% call fieldset("~/Experience.md") %}
       <article>
         <p style="text-align:left;font-weight:bold">
+          Graduate Researcher <span>&#64;</span>
+          <a href="https://xiaolonw.github.io/index.html"> <b>UCSD Wang Lab</b></a>
+          <span style="float:right;font-weight:bold;">
+            UCSD | Sept 2025 - Present
+          </span>
+        </p>
+        <ul>
+      <li>
+        Researching dexterous manipulation under the supervision of Prof. Xiaolong Wang
+      </li>
+      </ul>
+
+      <article>
+        <p style="text-align:left;font-weight:bold">
           ML Engineering Intern <span>&#64;</span>
           <a href="https://personainc.ai/"> <b>Persona AI</b></a>
           <span style="float:right;font-weight:bold;">
@@ -138,7 +152,7 @@
 
         <article>
           <p style="text-align:left;font-weight:bold">
-            Graduate Robotics Researcher <span>&#64;</span>
+            Graduate Researcher <span>&#64;</span>
             <a href="https://commalab.github.io/"> <b>CoMMA Lab</b></a>
             <span style="float:right;font-weight:bold;">
               Purdue | Aug 2024 - May 2025
@@ -187,7 +201,7 @@
             </ul>
 
             <p style="text-align:left;font-weight:bold">
-              Undegraduate Robotics Researcher <span>&#64;</span>
+              Undegraduate Researcher <span>&#64;</span>
               <a href="https://corallab.net/"> <b>CoRAL Lab</b></a>
               <span style="float:right;font-weight:bold;">
                 Purdue | Aug 2023 - May 2025
