--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -78,7 +78,12 @@
             "Robots are ***holes.",
             "Just give me spotify, a diet coke and two hours and i'll built the vention table" - ppl @ Persona
           </li>
-
+          <li>
+            "I was at nvidia when i was doing this work so of course I needed to do simulation", "Now we submit robotics works to CVPR" - robotics prof @ UCSD,
+          </li>
+          <li>
+            Q: "what else part [in the paper] that may need help" A: "experiment part..." - Slack @ 3:16 AM
+          </li>
         </ul>
         <h4>Favorite Coffee Shops</h4>
         <ul>
