--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -479,6 +479,15 @@
         </ul>
       </article>
     {% endcall %}
+    {% call fieldset("~/happiness.md") %}
+      <article class="flex justify-center">
+        <img
+          src="/assets/happiness.png"
+          alt="me @ Garibaldi Lake"
+          class="h-[450px] object-cover"
+        />
+      </article>
+    {% endcall %}
     <!-- <Coursework /> -->
     {% call fieldset("~/courses.md") %}
       <article>
